# PlaigarismDetector

./: CMakeLists.txt  README.md
docs/: ROADMAP.md
include/: APTEDDistance.h  ASTNormalizer.h  CLI.h  FileReader.h  FileScanner.h  Fingerprint.h  InvertedIndex.h  Lexer.h  Logger.h  Normalizer.h  Pipeline.h  ReportGenerator.h  RollingHash.h  SimilarityEngine.h  ThreadPool.h  Token.h  Winnower.h
reports/: report.html  report.json
sample_codes/: file_1.cpp  file_10.cpp  file_100.cpp  file_11.cpp  file_12.cpp  file_13.cpp  file_14.cpp  file_15.cpp  file_16.cpp  file_17.cpp  file_18.cpp  file_19.cpp  file_2.cpp  file_20.cpp  file_21.cpp  file_22.cpp  file_23.cpp  file_24.cpp  file_25.cpp  file_26.cpp  file_27.cpp  file_28.cpp  file_29.cpp  file_3.cpp  file_30.cpp  file_31.cpp  file_32.cpp  file_33.cpp  file_34.cpp  file_35.cpp  file_36.cpp  file_37.cpp  file_38.cpp  file_39.cpp  file_4.cpp  file_40.cpp  file_41.cpp  file_42.cpp  file_43.cpp  file_44.cpp  (+60 more)
src/: main.cpp
src/ast/: APTEDDistance.cpp  ASTNormalizer.cpp
src/cli/: CLI.cpp
src/core/: Pipeline.cpp  ThreadPool.cpp
src/fingerprint/: RollingHash.cpp  Winnower.cpp
src/index/: InvertedIndex.cpp
src/io/: FileReader.cpp  FileScanner.cpp  Logger.cpp
src/lexer/: Lexer.cpp  Normalizer.cpp
src/report/: ReportGenerator.cpp
src/similarity/: SimilarityEngine.cpp
tests/: test.cpp
